# algebra-engine

./: CMakeLists.txt  Math.txt  README.md
include/: AdditionExpression.h  BinaryOperatorExpression.h  DivisionExpression.h  Equation.h  Expression.h  ExpressionBuilder.h  MultiplicationExpression.h  NumberExpression.h  ParenthesisExpression.h  PowerExpression.h  SubtractionExpression.h  VariableExpression.h
src/: AdditionExpression.cpp  BinaryOperatorExpression.cpp  DivisionExpression.cpp  Equation.cpp  Expression.cpp  ExpressionBuilder.cpp  Math.cpp  Math.l  Math.y  MultiplicationExpression.cpp  NumberExpression.cpp  ParenthesisExpression.cpp  PowerExpression.cpp  SubtractionExpression.cpp  VariableExpression.cpp
